--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.3",
@@ -22,6 +24,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-swipeable-list": "^0.1.2",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
