--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@expo/vector-icons": "^13.0.0",
         "@expo/webpack-config": "^18.0.1",
         "@react-native-async-storage/async-storage": "1.17.11",
+        "@react-native-picker/picker": "2.4.8",
         "@react-navigation/native-stack": "^6.9.13",
         "@rneui/base": "^4.0.0-rc.7",
         "@rneui/themed": "^4.0.0-rc.8",
@@ -21,12 +22,14 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.71.8",
+        "react-native-bouncy-checkbox": "^3.0.7",
         "react-native-elements": "^3.4.3",
+        "react-native-modal": "^13.0.1",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
         "react-native-swipeable-list": "^0.1.2",
         "react-native-web": "~0.18.10",
-        "@react-native-picker/picker": "2.4.8"
+        "webpack-dev-server": "^4.15.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
