--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "@rneui/themed": "^4.0.0-rc.8",
         "expo": "~48.0.18",
         "expo-status-bar": "~1.4.4",
+        "express": "^4.18.2",
         "formik": "^2.4.5",
+        "mongodb": "^6.1.0",
+        "mongoose": "^7.5.3",
+        "mongosh": "^2.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.71.8",
@@ -29,8 +33,8 @@
         "react-native-screens": "~3.20.0",
         "react-native-swipeable-list": "^0.1.2",
         "react-native-web": "~0.18.10",
-        "webpack-dev-server": "^4.15.1",
-        "undefined": "@react-native-picker/picker:"
+        "undefined": "@react-native-picker/picker:",
+        "webpack-dev-server": "^4.15.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
