fixed list display on android

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "expo": "~48.0.18",
         "expo-status-bar": "~1.4.4",
         "express": "^4.18.2",
+        "flexbox": "^0.0.3",
         "formik": "^2.4.5",
         "mongodb": "^6.1.0",
         "mongoose": "^7.5.3",
